--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       <div class="dashboard">
         <div class="profile">
           <div class="profile-info">
-            <img src="./Assets/img.JPEG" width="150" alt="" />
+            <img src="./Assets/img.JPEG" alt="" />
             <h3>Md. Injamul Haque Rashik</h3>
             <br />
             <p class="title"><strong>ISA Trainee</strong></p>
             <p>Computer Science and Enginnering,</p>
             <b></b>
-            <p>American International University-Bangladesh(AIUB)</p>
+            <p>AIUB</p>
             <br />
           </div>
           <div class="dashboard-content">
