NavBar Completed with Monts font!

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -19,211 +24,229 @@
     <title>Upskill</title>
   </head>
   <body>
-    <div class="main-content">
-      <div class="dashboard">
-        <div class="profile">
-          <div class="profile-info">
-            <img src="./Assets/img.JPEG" alt="" />
-            <h3>Md. Injamul Haque Rashik</h3>
-            <br />
-            <p class="title"><strong>ISA Trainee</strong></p>
-            <p>Computer Science and Enginnering,</p>
-            <b></b>
-            <p>AIUB</p>
-            <br />
+    <div>
+      <div class="navbar">
+        <div><img src="./Assets/logo.PNG" width="177" alt="" /></div>
+        <div class="nav-links">
+          <p><span>home</span></p>
+          <p>training</p>
+          <p>video lessons</p>
+          <p>earn with upskill</p>
+        </div>
+        <div class="user-group">
+          <div class="sign-in-group">
+            <i class="fas fa-user-circle fa-3x"></i>
+            <p>sign in</p>
           </div>
-          <div class="dashboard-content">
-            <div id="dashboard-content-flex-first">
-              <img src="./Assets/browser@2x.png" width="30" alt="" />
-              Dashboard
-            </div>
-            <br />
-            <div class="dashboard-content-flex">
-              <img src="./Assets/file@2x.png" width="30" alt="" />
-              View Sample Outline
-            </div>
-            <br />
-            <div class="dashboard-content-flex">
-              <img src="./Assets/contract@2x.png" width="30" alt="" />
-              Create Course
-            </div>
-            <br />
-            <div class="dashboard-content-flex">
-              <img src="./Assets/lecture@2x.png" width="30" alt="" />
-              My Workshop
-            </div>
-            <br />
-            <div class="dashboard-content-flex">
-              <img src="./Assets/user@2x.png" width="30" alt="" />
-              Edit Profile
-            </div>
-            <br />
-            <div class="dashboard-content-flex">
-              <img src="./Assets/conversation (1)@2x.png" width="30" alt="" />
-              Message
-            </div>
-            <br />
-          </div>
+          <div class="sign-up-group">Sign up</div>
         </div>
       </div>
-      <div class="first-page-content">
-        <div class="summary">
-          <div class="summary-content">
-            <p class="summary-content-heading">TOTAL EARNED</p>
-            <br />
-            <div id="amount">
-              <p>BDT 60000</p>
-              <i class="fas fa-coins fa-lg"></i>
-            </div>
-          </div>
-          <div class="summary-content">
-            <p class="summary-content-heading">PENDING PAYMENT</p>
-            <br />
-            <div id="amount">
-              <p>BDT 5000</p>
-              <i class="fas fa-money-check fa-lg"></i>
-            </div>
-          </div>
-          <div class="summary-content">
-            <p class="summary-content-heading">WORKSHOPS COMPLETED</p>
-            <br />
-            <div id="amount">
-              <p>21</p>
-              <i class="fas fa-folder fa-lg"></i>
-            </div>
-          </div>
-        </div>
-        <div class="timeline">
-          <div class="timeline-content-first">UPCOMING</div>
-          <div class="timeline-content">PAST</div>
-          <div class="timeline-content">ALL</div>
-        </div>
-        <div class="workshop">
-          <div class="workshop-content">
-            <div class="content-image">
-              <img
-                src="./Assets/User-Experience-(UX)-Design@2x.png"
-                width="300"
-                alt=""
-              />
-            </div>
-            <div class="content-details">
-              <h5>WORKSHOP</h5>
+      <div class="main-content">
+        <div class="dashboard">
+          <div class="profile">
+            <div class="profile-info">
+              <img src="./Assets/img.JPEG" alt="" />
+              <h3>Md. Injamul Haque Rashik</h3>
               <br />
-              <p class="content-heading">
-                User Experience (UX) Design: From Ideation <br />
-                to Validation
-              </p>
-              <p class="content-timing">10.12.2019 • 06:30pm-08:00pm</p>
-              <div class="content-details-summary">
-                <div>
-                  <h5>REGISTERED</h5>
-                  <h1>75</h1>
-                </div>
-                <div>
-                  <h5>PAID</h5>
-                  <h1>16</h1>
-                </div>
-                <div>
-                  <h5>EARNING</h5>
-                  <h1>BDT 4500</h1>
-                </div>
+              <p class="title"><strong>ISA Trainee</strong></p>
+              <p>Computer Science and Enginnering,</p>
+              <b></b>
+              <p>AIUB</p>
+              <br />
+            </div>
+            <div class="dashboard-content">
+              <div id="dashboard-content-flex-first">
+                <img src="./Assets/browser@2x.png" width="30" alt="" />
+                Dashboard
+              </div>
+              <br />
+              <div class="dashboard-content-flex">
+                <img src="./Assets/file@2x.png" width="30" alt="" />
+                View Sample Outline
+              </div>
+              <br />
+              <div class="dashboard-content-flex">
+                <img src="./Assets/contract@2x.png" width="30" alt="" />
+                Create Course
+              </div>
+              <br />
+              <div class="dashboard-content-flex">
+                <img src="./Assets/lecture@2x.png" width="30" alt="" />
+                My Workshop
+              </div>
+              <br />
+              <div class="dashboard-content-flex">
+                <img src="./Assets/user@2x.png" width="30" alt="" />
+                Edit Profile
+              </div>
+              <br />
+              <div class="dashboard-content-flex">
+                <img src="./Assets/conversation (1)@2x.png" width="30" alt="" />
+                Message
+              </div>
+              <br />
+            </div>
+          </div>
+        </div>
+        <div class="first-page-content">
+          <div class="summary">
+            <div class="summary-content">
+              <p class="summary-content-heading">TOTAL EARNED</p>
+              <br />
+              <div id="amount">
+                <p>BDT 60000</p>
+                <i class="fas fa-coins fa-lg"></i>
+              </div>
+            </div>
+            <div class="summary-content">
+              <p class="summary-content-heading">PENDING PAYMENT</p>
+              <br />
+              <div id="amount">
+                <p>BDT 5000</p>
+                <i class="fas fa-money-check fa-lg"></i>
+              </div>
+            </div>
+            <div class="summary-content">
+              <p class="summary-content-heading">WORKSHOPS COMPLETED</p>
+              <br />
+              <div id="amount">
+                <p>21</p>
+                <i class="fas fa-folder fa-lg"></i>
               </div>
             </div>
           </div>
-          <div class="workshop-footer">
-            <h4>view discussion</h4>
-            <h4>view feedback</h4>
-            <h4>cancel workshop</h4>
-            <div class="social-media-icon">
-              <i class="fab fa-facebook-f fa-lg"></i>
-              <i class="fab fa-linkedin-in fa-lg"></i>
-            </div>
+          <div class="timeline">
+            <div class="timeline-content-first">UPCOMING</div>
+            <div class="timeline-content">PAST</div>
+            <div class="timeline-content">ALL</div>
           </div>
-        </div>
-        <div class="workshop">
-          <div class="workshop-content">
-            <div class="content-image">
-              <img
-                src="./Assets/Business Intelligence@2x.png"
-                width="300"
-                alt=""
-              />
-            </div>
-            <div class="content-details">
-              <h5>WORKSHOP</h5>
-              <br />
-              <p class="content-heading">
-                User Experience (UX) Design: From Ideation <br />
-                to Validation
-              </p>
-              <p class="content-timing">10.12.2019 • 06:30pm-08:00pm</p>
-              <div class="content-details-summary">
-                <div>
-                  <h5>REGISTERED</h5>
-                  <h1>75</h1>
-                </div>
-                <div>
-                  <h5>PAID</h5>
-                  <h1>16</h1>
-                </div>
-                <div>
-                  <h5>EARNING</h5>
-                  <h1>BDT 4500</h1>
+          <div class="workshop">
+            <div class="workshop-content">
+              <div class="content-image">
+                <img
+                  src="./Assets/User-Experience-(UX)-Design@2x.png"
+                  width="300"
+                  alt=""
+                />
+              </div>
+              <div class="content-details">
+                <h5>WORKSHOP</h5>
+                <br />
+                <p class="content-heading">
+                  User Experience (UX) Design: From Ideation <br />
+                  to Validation
+                </p>
+                <p class="content-timing">10.12.2019 • 06:30pm-08:00pm</p>
+                <div class="content-details-summary">
+                  <div>
+                    <h5>REGISTERED</h5>
+                    <h1>75</h1>
+                  </div>
+                  <div>
+                    <h5>PAID</h5>
+                    <h1>16</h1>
+                  </div>
+                  <div>
+                    <h5>EARNING</h5>
+                    <h1>BDT 4500</h1>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="workshop-footer">
-            <h4>view discussion</h4>
-            <h4>view feedback</h4>
-            <h4>cancel workshop</h4>
-            <div class="social-media-icon">
-              <i class="fab fa-facebook-f fa-lg"></i>
-              <i class="fab fa-linkedin-in fa-lg"></i>
-            </div>
-          </div>
-        </div>
-        <div class="workshop">
-          <div class="workshop-content">
-            <div class="content-image">
-              <img
-                src="./Assets/Presentation Skill for Kids@2x.png"
-                width="300"
-                alt=""
-              />
-            </div>
-            <div class="content-details">
-              <h5>WORKSHOP</h5>
-              <br />
-              <p class="content-heading">
-                User Experience (UX) Design: From Ideation <br />
-                to Validation
-              </p>
-              <p class="content-timing">10.12.2019 • 06:30pm-08:00pm</p>
-              <div class="content-details-summary">
-                <div>
-                  <h5>REGISTERED</h5>
-                  <h1>75</h1>
-                </div>
-                <div>
-                  <h5>PAID</h5>
-                  <h1>16</h1>
-                </div>
-                <div>
-                  <h5>EARNING</h5>
-                  <h1>BDT 4500</h1>
-                </div>
+            <div class="workshop-footer">
+              <h4>view discussion</h4>
+              <h4>view feedback</h4>
+              <h4>cancel workshop</h4>
+              <div class="social-media-icon">
+                <i class="fab fa-facebook-f fa-lg"></i>
+                <i class="fab fa-linkedin-in fa-lg"></i>
               </div>
             </div>
           </div>
-          <div class="workshop-footer">
-            <h4>view discussion</h4>
-            <h4>view feedback</h4>
-            <h4>cancel workshop</h4>
-            <div class="social-media-icon">
-              <i class="fab fa-facebook-f fa-lg"></i>
-              <i class="fab fa-linkedin-in fa-lg"></i>
+          <div class="workshop">
+            <div class="workshop-content">
+              <div class="content-image">
+                <img
+                  src="./Assets/Business Intelligence@2x.png"
+                  width="300"
+                  alt=""
+                />
+              </div>
+              <div class="content-details">
+                <h5>WORKSHOP</h5>
+                <br />
+                <p class="content-heading">
+                  User Experience (UX) Design: From Ideation <br />
+                  to Validation
+                </p>
+                <p class="content-timing">10.12.2019 • 06:30pm-08:00pm</p>
+                <div class="content-details-summary">
+                  <div>
+                    <h5>REGISTERED</h5>
+                    <h1>75</h1>
+                  </div>
+                  <div>
+                    <h5>PAID</h5>
+                    <h1>16</h1>
+                  </div>
+                  <div>
+                    <h5>EARNING</h5>
+                    <h1>BDT 4500</h1>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="workshop-footer">
+              <h4>view discussion</h4>
+              <h4>view feedback</h4>
+              <h4>cancel workshop</h4>
+              <div class="social-media-icon">
+                <i class="fab fa-facebook-f fa-lg"></i>
+                <i class="fab fa-linkedin-in fa-lg"></i>
+              </div>
+            </div>
+          </div>
+          <div class="workshop">
+            <div class="workshop-content">
+              <div class="content-image">
+                <img
+                  src="./Assets/Presentation Skill for Kids@2x.png"
+                  width="300"
+                  alt=""
+                />
+              </div>
+              <div class="content-details">
+                <h5>WORKSHOP</h5>
+                <br />
+                <p class="content-heading">
+                  User Experience (UX) Design: From Ideation <br />
+                  to Validation
+                </p>
+                <p class="content-timing">10.12.2019 • 06:30pm-08:00pm</p>
+                <div class="content-details-summary">
+                  <div>
+                    <h5>REGISTERED</h5>
+                    <h1>75</h1>
+                  </div>
+                  <div>
+                    <h5>PAID</h5>
+                    <h1>16</h1>
+                  </div>
+                  <div>
+                    <h5>EARNING</h5>
+                    <h1>BDT 4500</h1>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="workshop-footer">
+              <h4>view discussion</h4>
+              <h4>view feedback</h4>
+              <h4>cancel workshop</h4>
+              <div class="social-media-icon">
+                <i class="fab fa-facebook-f fa-lg"></i>
+                <i class="fab fa-linkedin-in fa-lg"></i>
+              </div>
             </div>
           </div>
         </div>
