Workshop Page Completed!

--- a/Pages/workshop.html
+++ b/Pages/workshop.html
@@ -92,7 +92,53 @@
             </div>
           </div>
         </div>
-        <div class="first-page-content">Hello</div>
+        <div class="second-page-content">
+          <div class="timeline">
+            <div class="timeline-content-first">UPCOMING</div>
+            <div class="timeline-content">PAST</div>
+            <div class="timeline-content">ALL</div>
+          </div>
+          <div class="courses">
+            <div class="courses-row">
+              <div class="course-content">
+                <img width="300" src="../Assets/1.png" alt="" />
+                <h4>
+                  User Experience (UX) Design: From Ideation to Validation
+                </h4>
+                <h5>10.12.2019 • 06:30pm-08:00pm</h5>
+              </div>
+              <div class="course-content">
+                <img width="300" src="../Assets/2.png" alt="" />
+                <h4>Bootcamp on Python Programing</h4>
+                <h5>10.12.2019 • 06:30pm-08:00pm</h5>
+              </div>
+              <div class="course-content">
+                <img width="300" src="../Assets/6.png" alt="" />
+                <h4>Starting Up your First Startup</h4>
+                <h5>10.12.2019 • 06:30pm-08:00pm</h5>
+              </div>
+            </div>
+            <div class="courses-row">
+              <div class="course-content">
+                <img width="300" src="../Assets/4.png" alt="" />
+                <h4>
+                  User Experience (UX) Design: From Ideation to Validation
+                </h4>
+                <h5>10.12.2019 • 06:30pm-08:00pm</h5>
+              </div>
+              <div class="course-content">
+                <img width="300" src="../Assets/5.png" alt="" />
+                <h4>Bootcamp on Python Programing</h4>
+                <h5>10.12.2019 • 06:30pm-08:00pm</h5>
+              </div>
+              <div class="course-content">
+                <img width="300" src="../Assets/3.png" alt="" />
+                <h4>Starting Up your First Startup</h4>
+                <h5>10.12.2019 • 06:30pm-08:00pm</h5>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <script>
