Login-page Completed!

--- a/Pages/login.html
+++ b/Pages/login.html
@@ -4,7 +4,64 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+<link rel="stylesheet" href="../Styles/login.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
+    <title>Upskill</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <div class="navbar">
+        <div><img src="../Assets/logo.PNG" width="177" alt="" /></div>
+        <div class="nav-links">
+          <p><span>home</span></p>
+          <p>training</p>
+          <p>video lessons</p>
+          <p>earn with upskill</p>
+        </div>
+        <div class="user-group">
+          <div class="sign-in-group">
+            <i class="fas fa-user-circle fa-3x"></i>
+            <p>sign in</p>
+          </div>
+          <div class="sign-up-group">Sign up</div>
+        </div>
+      </div>
+            <div class="login-content">
+          <div class="login-img">
+            <h1>A few more clicks to <br> sign to  your Trainer Account</h1> <br>
+            <p>Manage workshop sales and view reports from your dashboard</p>
+            <p class="second-p">For any problem with sign in please send mail to</p> <br>
+            <p><span class="mail">sanan.upskill@gmail.com</span></p>
+          </div>
+          <div class="login-info">
+            <h2>Log In</h2> <br>
+            <input type="text" placeholder="Email"> <br>
+            <input type="password" placeholder="Password">
+            <div class="forgot">
+              <a class="forgot-alt" href="#">Forgot Password?</a> <a class="forgot-alt-2" href="#">Not member yet?</a>
+            </div>
+            <div class="sign-btn">SIGN IN</div> <br>
+            or with
+            <div class="social-btn">
+              <i class="fab fa-facebook-square fa-2x fb-icon"></i>
+              <i class="fab fa-linkedin fa-2x"></i>
+            </div>
+            <p class="bottom-text">By signing up agree to our <br> <span>Terms and Conditions</span> & <span>Privacy Policy</span></p>
+          </div>
+        </div></body>
 </html>
