Dashboard Issue Fixed!

--- a/Pages/login.html
+++ b/Pages/login.html
@@ -34,11 +34,11 @@
           <p>earn with upskill</p>
         </div>
         <div class="user-group">
-          <div class="sign-in-group">
+          <div id="sign-in-btn" class="sign-in-group">
             <i class="fas fa-user-circle fa-3x"></i>
             <p>sign in</p>
           </div>
-          <div class="sign-up-group">Sign up</div>
+          <div id="sign-in-btn" class="sign-up-group">Sign up</div>
         </div>
       </div>
             <div class="login-content">
