--- a/Pages/profile.html
+++ b/Pages/profile.html
@@ -4,7 +4,175 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="../Styles/profile.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
+    <title>Upskill</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <div class="navbar">
+        <div><img src="../Assets/logo.PNG" width="177" alt="" /></div>
+        <div class="nav-links">
+          <p><span>home</span></p>
+          <p>training</p>
+          <p>video lessons</p>
+          <p>earn with upskill</p>
+        </div>
+        <div class="user-group">
+          <div id="sign-in-btn" class="sign-in-group">
+            <i class="fas fa-user-circle fa-3x"></i>
+            <p>sign in</p>
+          </div>
+          <div id="sign-in-btn2" class="sign-up-group">Sign up</div>
+        </div>
+      </div>
+      <div class="main-content">
+        <div class="dashboard">
+          <div class="profile">
+            <div class="profile-info">
+              <img src="../Assets/img.JPEG" alt="" />
+              <h3>Md. Injamul Haque Rashik</h3>
+              <br />
+              <p class="title"><strong>ISA Trainee</strong></p>
+              <p>Computer Science and Enginnering,</p>
+              <b></b>
+              <p>AIUB</p>
+              <br />
+            </div>
+            <div class="dashboard-content">
+              <div id="dashboard-button" class="dashboard-content-flex">
+                <img src="../Assets/browser-white@2x.png" width="30" alt="" />
+                Dashboard
+              </div>
+              <br />
+              <div class="dashboard-content-flex">
+                <img src="../Assets/file@2x.png" width="30" alt="" />
+                View Sample Outline
+              </div>
+              <br />
+              <div class="dashboard-content-flex">
+                <img src="../Assets/contract@2x.png" width="30" alt="" />
+                Create Course
+              </div>
+              <br />
+              <div id="workshop-btn" class="dashboard-content-flex">
+                <img src="../Assets/lecture@2x.png" width="30" alt="" />
+                My Workshop
+              </div>
+              <br />
+              <div id="dashboard-content-flex-first">
+                <img src="../Assets/user-green@2x.png" width="30" alt="" />
+                Edit Profile
+              </div>
+              <br />
+              <div class="dashboard-content-flex">
+                <img
+                  src="../Assets/conversation (1)@2x.png"
+                  width="30"
+                  alt=""
+                />
+                Message
+              </div>
+              <br />
+            </div>
+          </div>
+        </div>
+        <div class="third-page-content">
+          <div class="personal-info">
+            <h5>Personal info</h5>
+            <div class="row">
+              <div>
+                User Name <br />
+                <input type="text" placeholder="Md. Faruk Hossain" />
+              </div>
+              <div>
+                Designation <br />
+                <input type="text" placeholder="Head of Design" />
+              </div>
+            </div>
+            <div class="row">
+              <div>
+                Email <br />
+                <input type="text" placeholder="faruk@gmail.com" />
+              </div>
+              <div>
+                Phone <br />
+                <input type="text" placeholder="01711 22 33 44" />
+              </div>
+            </div>
+            About Me <br />
+            <input
+              id="about-input"
+              type="text"
+              placeholder="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy"
+            />
+          </div>
+          <div class="contact-info">
+            <h5>Contact information</h5>
+            Adress <br />
+            <input
+              id="adress-input"
+              type="text"
+              placeholder="House. 123, Road. 5, Banani"
+            />
+            <div class="row">
+              <div>
+                City <br />
+                <input type="text" placeholder="Dhaka" />
+              </div>
+              <div>
+                Postal Code <br />
+                <input type="text" placeholder="1209" />
+              </div>
+            </div>
+            </div>
+          <div class="password-info">
+              <h5>Change password</h5>
+            <div class="row">
+              <div>
+                New password <br />
+                <input type="password" placeholder="************" />
+              </div>
+              <div>
+                Confirm Password <br />
+                <input type="password" placeholder="************" />
+              </div>
+            </div>
+            </div>
+            <div class="save-btn">Save</div>
+          </div>
+          
+        </div>
+      </div>
+    </div>
+    <script>
+      document.getElementById("dashboard-button").onclick = function () {
+        location.href = "../index.html";
+      };
+      document.getElementById("sign-in-btn").onclick = function () {
+        location.href = "./login.html";
+      };
+      document.getElementById("sign-in-btn2").onclick = function () {
+        location.href = "./login.html";
+      };
+      document.getElementById("workshop-btn").onclick = function () {
+        location.href = "./workshop.html";
+      };
+    </script>
+  </body>
 </html>
