Message-Box Ready!

--- a/Pages/message.html
+++ b/Pages/message.html
@@ -96,41 +96,46 @@
           <div class="chat-div">
             <div class="user-div">
               <input type="text" placeholder="🔍 Search" />
-              <div class="user-group">
-                <div class="user-group-each first">
+              <div class="message-user-group">
+                <div class="message-user-group-each-first">
                   <img src="../Assets/img.JPEG" width="50" alt="" />
                   <div>
-                    <h5>Contact Name One</h5>
+                    <h5>
+                      Contact Name One <span class="span span-first">Now</span>
+                    </h5>
                     <p>
                       User Interface’ and both of these elements <br />
                       are crucial for product development.
                     </p>
                   </div>
                 </div>
-                <div class="user-group-each">
+                <div class="message-user-group-each">
                   <img src="../Assets/img.JPEG" width="50" alt="" />
                   <div>
-                    <h5>Contact Name One</h5>
+                    <h5>Contact Name One <span class="span">2h ago</span></h5>
                     <p>
                       User Interface’ and both of these elements <br />
                       are crucial for product development.
                     </p>
                   </div>
                 </div>
-                <div class="user-group-each">
+                <div class="message-user-group-each">
                   <img src="../Assets/img.JPEG" width="50" alt="" />
                   <div>
-                    <h5>Contact Name One</h5>
+                    <h5>
+                      Contact Name One
+                      <span class="span">23 Apr</span>
+                    </h5>
                     <p>
                       User Interface’ and both of these elements <br />
                       are crucial for product development.
                     </p>
                   </div>
                 </div>
-                <div class="user-group-each">
+                <div class="message-user-group-each">
                   <img src="../Assets/img.JPEG" width="50" alt="" />
                   <div>
-                    <h5>Contact Name One</h5>
+                    <h5>Contact Name One <span class="span">11 Mar</span></h5>
                     <p>
                       User Interface’ and both of these elements <br />
                       are crucial for product development.
@@ -139,7 +144,10 @@
                 </div>
               </div>
             </div>
-            <div class="message-div"></div>
+            <div class="message-div">
+              <div class="blue-bg"></div>
+              <div class="message-sub-div">hello</div>
+            </div>
           </div>
         </div>
       </div>
