--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
               <br />
               <div id="msg-btn" class="dashboard-content-flex">
                 <img src="./Assets/conversation (1)@2x.png" width="30" alt="" />
+                <div class="notification">3</div>
                 Message
               </div>
               <br />
