--- a/Pages/workshop.html
+++ b/Pages/workshop.html
@@ -86,6 +86,7 @@
                   width="30"
                   alt=""
                 />
+                <div class="notification">3</div>
                 Message
               </div>
               <br />
